--- a/cell02/ex01/menu.css
+++ b/cell02/ex01/menu.css
@@ -1,117 +1,79 @@
 /* Mise en fome generale */
 
-html{
-	--hauteur-menu: 60px;
-}
-
 * {
 	margin: 0px;
 	padding: 0px;
 	font-family: Montserrat, sans-serif;
 }
 
-
-nav {
-	width: 100%;
-	font-size: 18px;
-	position: sticky;
-	top: 0;
-}
-
-nav > ul {
-	display: flex;
+header {
 	text-align: center;
-	box-shadow: 0px 1px 2px 1px rgba(0,0,0,0.3);
-	height: var(--hauteur-menu);
 }
 
-nav ul {
-	list-style-type: none;
+.logo {
+	width: 300px;
 }
 
-nav > ul > li {
-	background-color: white;
+ul {
+	display: flex;
+	justify-content: center;
+}
+
+nav ul li {
+	float: left;
+	width: 25%;
+	text-align: center;
 	position: relative;
-	height: 100%;
-	flex: 1;
+	list-style: none;
 }
 
-nav > ul > li > a {
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
+nav ul::after{
+	content: "";
+	display: table;
+	clear: both;
 }
 
-li a {
-	text-decoration: none;
+nav a {
+	display: block;
 	color: black;
+	text-decoration: none;
+	border-bottom: 2px solid transparent;
+	padding: 10px 0px;
 }
 
-.menu-deroulant > a:after{
-	content: '❯';
-	font-size: 15px;
-	margin-left: 7px;
-	display: inline-block;
+nav a:hover{
+	color: gray;
+	border-bottom: 2px solid black;
 }
 
-.sous-menu {
-	margin-top: var(--hauteur-menu);
+.sous_nav {
+	display: none;
+	box-shadow: 0px 1px 2px #CCC;
+	background-color: white;
+	position: absolute;
+	width: 100%;
+	z-index: 1000;
+}
+
+nav > ul li:hover .sous_nav {
+	display: block;
+}
+
+.sous_nav li {
+	float: none;
 	width: 100%;
 	text-align: left;
-	background-color: white;
-	border-radius: 2px;
-	overflow: hidden;
-	max-height: 0;
 }
 
-.sous-menu > li > a {
-	height: 50px;
-	padding-left: 20px;
-	width: 100%;
-	align-items: center;
-	display: flex;
+.sous_nav a{
+	padding: 10px;
+	border-bottom: none;
 }
 
-.sous-menu > li:hover {
-	background-color: rgba(33, 105, 236, 0.3);
+.sous_nav a:hover{
+	border-bottom: none;
 }
 
-.sous-menu > li:hover > a {
-	color: white;
-}
-
-nav > ul > li:hover > a{
-	color: #6f21ec;
-}
-@keyframes arrow {
-	0% {
-	transform: rotate(0deg);
-	}
-	100%{
-	transform: rotate(90deg);
-	}
-}
-
-.menu-deroulant:hover > a:after{
-	animation: arrow 0.2s linear forwards;
-}
-
-@keyframes deroulement {
-	0% {
-	box-shadow: 0px 3px 3px 1px rgba(0,0,0,0);
-	border-top: 3px solid #6f21ec;
-	}
-	30% {
-	box-shadow: 0px 3px 3px 1px rgba(0,0,0,0.3);
-	}
-	100% {
-	max-height: 50em;
-	border-top: 3px solid #6f21ec;
-	box-shadow: 0px 3px 3px 1px rgba(0,0,0,0.3);
-	}
-}
-
-.menu-deroulant:hover > .sous-menu {
-	animation: deroulement 1s forwards;
+.nav_deroulante > a::after{
+	font-size: 12px;
 }
