--- a/Rush/Style/style_profil.css
+++ b/Rush/Style/style_profil.css
@@ -6,10 +6,14 @@
 * {
 	box-sizing: border-box;
 }
+html{
+	height: 1000px;
+}
 body{
 	font-family: "Montserrat";
 	margin: 0;
 	padding: 0;
+	height: 1000px;
 	text-align: center;
 	position: relative;
 }
@@ -22,24 +26,11 @@ body{
 
 }
 .logo {
-	width: 500px;
+	width: 200px;
 	z-index: 2;
 }
 
-/* IMAGE DE BACKGOUND*/
-.img-background{
-	background-image: url(../Images/ecole_42.jpg);
-	background-repeat: no-repeat;
-	background-attachment: fixed;
-	background-size: cover;
-	height: 980px;
-	opacity: 0.6;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-}
-
-/* GESTION DU HEADER */
+/* GESTION DU FOOTER */
 footer{
 	background-color: #DFD4D4;
 }
@@ -51,17 +42,21 @@ footer p{
 /* GESTION DE LA BARRE DE NAVIGATION */
 header
 {
-	position: -webkit-sticky;
-	position: sticky;
+	display: flex;
+	flex-direction: column;
+	position:fixed;
+	align-items: stretch;
 	top: 0;
+	left: 0;
+	width: 300px;
+	z-index: 9997;
+	overflow-y: auto;
 }
 .navbar {
 	background-color: #DFD4D4;
 }
-nav ul {
-	display: flex;
-	flex-direction: row;
-	justify-content: space-around;
+nav ul,
+col ul {
 	margin: 0;
 	padding: 0;
 }
@@ -80,7 +75,17 @@ a{
 	flex-direction: column;
 	align-items: center;
 }
-.container img {
+
+.container .imgAlexia {
+	width: 150px;
+	height: 150px;
+	border-radius: 50%;
+	border: 3px solid white;
+	box-shadow: 2px 2px 10px 2px rgba(0, 0, 0, 0.5);
+	transition: filter 0.4s ease-in-out;
+}
+
+.container .imgJulien {
 	filter: grayscale();
 	width: 150px;
 	height: 150px;
@@ -112,49 +117,28 @@ h1 {
 	width: 100%;
 	left: 0;
 }
-.sous_nav {
-	display: none;
-	box-shadow: 0px 1px 2px #CCC;
-	background-color: #DFD4D4;
+
+
+/* GESTION CONTENU GLOBAL + option footer */
+#cv,
+footer{
 	width: 100%;
-	z-index: 1000;
+	padding-left: 250px;
+	display: flex;
+	justify-content: center;
 }
-
-nav > ul li:hover .sous_nav {
-	display: block;
-}
-
-.sous_nav li {
-	float: none;
-	width: 100%;
-	text-align: left;
-}
-
-.sous_nav a{
-	padding: 10px;
-	border-bottom: none;
-}
-
-.sous_nav a:hover{
-	border-bottom: none;
-}
-
-.nav_deroulante > a::after{
-	font-size: 12px;
-}
-
-/* GESTION ABOUT */
 .row{
 	display: flex;
 	flex-direction: row;
 	justify-content: center;
 }
-.container-photo {
+.col {
 	display: flex;
+	width: 50%;
 }
-.container-photo img{
-	width: 200px;
-	margin-right: 50px;
+.col li {
+	list-style: none;
+
 }
 
 
