--- a/Rush/Style/style_profil.css
+++ b/Rush/Style/style_profil.css
@@ -140,6 +140,10 @@ footer{
 	display: flex;
 	flex-direction: row;
 	justify-content: center;
+	flex-wrap: wrap;
+}
+.row >*{
+	max-width: 100%;
 }
 .col {
 	display: flex;
@@ -165,6 +169,9 @@ li span{
 .categorie {
 	font-family: "Montserrat Bold";
 }
+#main-xp-alexia{
+	margin-top: 50px;
+}
 .container-all-experience{
 	display: flex;
 	justify-content: space-around;
@@ -177,10 +184,36 @@ li span{
 .container-competences li{
 	list-style-type: none;
 }
-
-.progress{
-	display: block;
+#main-skills-alexia{
+	background-color: #F8F6F6;
 }
 
-
+.skills-row{
+	margin: 10px;
+}
+.progress .skills{
+	display: block;
+	height: 60px;
+}
+.progress{
+	width: 100%;
+	display: flex;
+	height: 16px;
+	overflow: hidden;
+}
+.progress-bar-container{
+	background-color: #E8E0E0;
+	display: flex;
+	flex-direction: row;
+	width: 500px;
+}
+.progress-bar{
+	height: 15px;
+	background-color: #E5DCDC;
+}
+.container-all-skills{
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+}
 
