--- a/cell02/ex03/card.css
+++ b/cell02/ex03/card.css
@@ -19,7 +19,8 @@ body {
 }
 table{
 	display: flex;
-	flex-direction: column;
+	flex-direction: row;
+	justify-content: center;
 }
 
 .tableau {
@@ -27,8 +28,8 @@ table{
 }
 
 tbody {
-	width: 50%;
-	border: 2px solid black;
+	width: 30%;
+	border: 2px solid #CB2027;
 	border-radius: 20px;
 	box-shadow: 6px 6px 6px grey;
 	margin: 10px;
@@ -51,5 +52,26 @@ td {
 
 .reseaux {
 	display: flex;
-	justify-content: space-around;
+	justify-content: center;
+	font-size: 20px;
+	color: #CB2027;
 }
+
+.fa-instagram,
+.fa-facebook,
+.fa-linkedin {
+	padding: 0 5px 0 5px;
+}
+
+
+#contact {
+	border: 2px double #CB2027;
+	background-color: #CB2027;
+	width: 20%;
+	height: 30px;
+	border-radius: 5%;
+	font-weight: bold;
+	font-size: large;
+}
+
+
