--- a/Rush/Style/style_profil_julien.css
+++ b/Rush/Style/style_profil_julien.css
@@ -77,7 +77,7 @@ a{
 	align-items: center;
 }
 
-.container .imgAlexia {
+.container .imgJulienpj {
 	width: 150px;
 	height: 150px;
 	border-radius: 50%;
@@ -86,7 +86,7 @@ a{
 	transition: filter 0.4s ease-in-out;
 }
 
-.container .imgJulien {
+.container .imgAlexiapj {
 	filter: grayscale();
 	width: 150px;
 	height: 150px;
@@ -104,6 +104,10 @@ h1 {
 .title {
 	margin: 0.5px;
 	position: relative;
+	font-family: "Montserrat Bold";
+}
+h4 .name{
+	font-weight: lighter;
 }
 .title::after {
 	position: absolute;
@@ -141,10 +145,9 @@ footer{
 	flex-direction: row;
 	justify-content: center;
 	flex-wrap: wrap;
+	width: inherit;
 }
-.row >*{
-	max-width: 100%;
-}
+
 .col {
 	display: flex;
 	align-items: center;
@@ -155,6 +158,7 @@ footer{
 }
 .col ul{
 	margin: 0;
+	padding: 0%;
 }
 .row .col ul li{
 	display: flex;
@@ -169,8 +173,12 @@ li span{
 .categorie {
 	font-family: "Montserrat Bold";
 }
+#main-about-alexia{
+	padding: 15px 0 25px 0;
+}
 #main-xp-alexia{
-	margin-top: 50px;
+	padding: 15px 0 25px 0;
+
 }
 .container-all-experience{
 	display: flex;
@@ -186,6 +194,7 @@ li span{
 }
 #main-skills-alexia{
 	background-color: #F8F6F6;
+	padding: 15px 0 25px 0;
 }
 
 .skills-row{
@@ -194,6 +203,11 @@ li span{
 .progress .skills{
 	display: block;
 	height: 60px;
+}
+.skills .progress-bar{
+	height: 10px;
+	transition: 0.9s;
+	background-color: #149ddd;
 }
 .progress{
 	width: 100%;
@@ -205,15 +219,56 @@ li span{
 	background-color: #E8E0E0;
 	display: flex;
 	flex-direction: row;
-	width: 500px;
+	width:300px;
 }
 .progress-bar{
 	height: 15px;
 	background-color: #E5DCDC;
 }
+
 .container-all-skills{
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: center;
 }
+#contact{
+	background-color: #F8F6F6;
+	padding: 15px 0 25px 0;
+}
+.row-contact{
+	display: flex;
+	flex-direction: row;
+	justify-content: space-around;
+}
 
+.icone-reseaux{
+	display: flex;
+	flex-direction: column;
+}
+.fa-instagram,
+.fa-facebook,
+.fa-linkedin {
+	padding: 5px 0 5px 0;
+	font-size: 50px;
+	color:#857F7F;
+}
+form div{
+	margin: 10px 0;
+}
+.form {
+	width: 100%;
+}
+.form-type{
+	width: 550px;
+}
+textarea{
+	height: 200px;
+	width: 100%;
+}
+.btn-form {
+	background: #857F7F;
+	border: 0;
+	padding: 10px 24px;
+	color: #fff;
+	transition: 0.4s;
+}
